cabal-version:      3.0
name:               monad-ideals
version:            0.1.0.0

synopsis:           Ideal Monads and coproduct of them
description:
  Type class to represent ideal monads in terms of the
  "ideal part" of ideal monads. See README for more.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
homepage:           https://github.com/viercc/monad-ideals
copyright: Copyright (C) 2008 Edward A. Kmett, 
           Copyright (C) 2004--2008 Dave Menendez, 
           Copyright (C) 2007 Iavor Diatchki
           Copyright (C) 2024 Koji Miyazato

category:           Control
build-type:         Simple

extra-doc-files:    CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/viercc/monad-ideals.git
  branch:   main

common warnings
    ghc-options: -Wall -Wcompat

library
    import:           warnings

    exposed-modules:
        Control.Functor.Internal.Mutual,
        Control.Monad.Ideal,
        Control.Monad.Isolated,
        Control.Monad.Coproduct,
        Control.Comonad.Coideal,

        Data.List.TwoOrMore,
        Data.List.NotOne,
        Data.Functor.KeepLeft,

    build-depends:
      base ^>=4.18.2.0,
      bifunctors,
      comonad,
      semigroupoids

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite monad-ideals-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
    build-depends:
        base,
        monad-ideals
